# ChessOx

./: .gitignore  CMakeLists.txt  OXTA_MANIFESTO.md  Oxta_Analysis_Report.md  README.md  build.py  client_gui.py  custom_bench.py  debug_eval.cpp  gen_data.py  generate_nnue_pst.py  play_gui.py  requirements.txt  run_bot.bat  run_bot.sh  run_gui.bat  run_selfplay.bat  run_selfplay.py  run_selfplay.sh  run_server.bat  server_flask.py  setup.bat  setup.sh  titan_ab_vs_mcts.py  titan_bot.py  titan_brain.py  titan_coliseum.py  titan_csp.py  titan_gating.py  titan_htn.py  titan_memory.py  titan_plot.py  titan_science.py  titan_selenium.py  titan_selfplay.py  titan_shm.py  titan_trainer.py  titan_tuner.py  titan_v6_test.py
.github/workflows/: main.yml
src/: main.cpp
src/core/: attacks.cpp  attacks.hpp  bitboard.hpp  book.hpp  eval.hpp  movegen.cpp  movegen.hpp  moves.hpp  position.cpp  position.hpp  see.hpp  types.hpp  uci.hpp  zobrist.cpp  zobrist.hpp
src/memory/: ring_buffer.hpp  shared_buffer.hpp  tt.hpp
src/nnue/: layers.hpp  nnue.cpp  nnue.hpp
src/search/: heuristics.hpp  search.hpp  thread.hpp  time_man.hpp
src/tuning/: spsa.hpp
src/util/: perft.hpp  rand.hpp  simd.hpp
